[tool.poetry]
name = "discordpy-music-bot"
version = "0.0.1"
description = "This is bot made with discord.py used to play music in voice channels with use of youtube-dl and ffmpeg."
authors = ["Andrija Jovanovic <andrijajovanovic001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
youtube-dl = "^2020.7.28"
async-timeout = "^3.0.1"
PyNaCl = "^1.4.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
